# isoworld

./: .gitignore  .gitmodules  Biome List.txt  Biome stuff.txt  CMakeLists.deps.txt.in  CMakeLists.txt  ColorList.cpp  ColorList.h  DetailedTile.cpp  DetailedTile.h  IsoWorld.rc  IsoWorld.sln  IsoWorld.vcproj  MapSection.cpp  MapSection.h  Readme.rst  Readme.txt  Resource.h  TileSet.cpp  TileSet.h  UserConfig.cpp  UserConfig.h  UserInterface.cpp  UserInterface.h  c_block.cpp  c_config.cpp  c_config.h  c_imagelist.cpp  c_imagelist.h  c_map_section.cpp  c_map_section.h  c_minimap.cpp  c_minimap.h  c_tile.cpp  c_tile.h  c_tileset.cpp  c_tileset.h  common.c  common.h  console.cpp  (+13 more)
DT_large/: DT_large.ini  badlands.ini  beach.ini  beach_arctic.ini  beach_temp.ini  desert.ini  desert2.ini  forest_fur.ini  forest_fur_trop.ini  forest_temp.ini  forest_trop.ini  forest_trop_dry.ini  forest_trop_moist.ini  glacier.ini  grassland_temp.ini  grassland_trop.ini  lake_brackish_temp.ini  lake_brackish_trop.ini  lake_fresh_temp.ini  lake_fresh_trop.ini  lake_salt_temp.ini  lake_salt_trop.ini  mountain_tall.ini  ocean.ini  ocean_temp.ini  ocean_trop.ini  river.ini  road.ini  rock.ini  savanna_temp.ini  savanna_trop.ini  shrubland_temp.ini  shrubland_trop.ini  swamp.ini  swamp_fresh_temp.ini  swamp_fresh_trop.ini  swamp_mangrove.ini  swamp_salt_temp.ini  swamp_salt_trop.ini  taiga.ini  (+2 more)
DT_large/Old/: farm_fallow.ini  farm_planted.ini  village.ini
Topo/: Topo.ini
agui/lib/: agui_allegro5.lib
allegro/include/: physfs.h
allegro/include/allegro5/: allegro_audio.h  allegro_font.h  allegro_opengl.h  allegro_primitives.h  allegro_ttf.h  base.h  bitmap.h  debug.h  display.h  events.h  file.h  fshook.h  joystick.h  memfile.h  memory.h  mouse.h  path.h  system.h  threads.h
allegro/include/allegro5/internal/: aintern_acodec_cfg.h  aintern_audio.h  aintern_display.h  aintern_dtor.h  aintern_file.h  aintern_image_cfg.h  aintern_iphone.h  aintern_joystick.h  aintern_keyboard.h  aintern_mouse.h  aintern_native_dialog.h  aintern_opengl.h  aintern_pixels.h  aintern_xglx.h
allegro/include/allegro5/opengl/GLext/: gl_ext_api.h
allegro/include/allegro5/platform/: aintlnx.h  aintunix.h  aintwin.h  alosx.h  alplatf.h  alwin.h
allegro/lib/: allegro-4.9.ilk  allegro-static.idb  allegro-static.lib  allegro.exp  allegro.idb  allegro.lib  allegro_acodec-4.9.ilk  allegro_acodec-static.idb  allegro_acodec-static.lib  allegro_acodec.exp  allegro_acodec.idb  allegro_acodec.lib  allegro_audio-4.9.ilk  allegro_audio-static.idb  allegro_audio-static.lib  allegro_audio.exp  allegro_audio.idb  allegro_audio.lib  allegro_color-4.9.ilk  allegro_color-static.idb  allegro_color-static.lib  allegro_color.exp  allegro_color.idb  allegro_color.lib  allegro_dialog-4.9.ilk  allegro_dialog-static.idb  allegro_dialog-static.lib  allegro_dialog.exp  allegro_dialog.idb  allegro_dialog.lib  allegro_font-4.9.ilk  allegro_font-static.idb  allegro_font-static.lib  allegro_font.exp  allegro_font.idb  allegro_font.lib  allegro_image-4.9.ilk  allegro_image-static.idb  allegro_image-static.lib  allegro_image.exp  (+26 more)
default/: default_tile.ini
resources/: material_colors.ini  tilesets.ini
resources/Oversized/: Oversized.ini
resources/Topo/: Topo.ini
resources/rop/: rop_ocean.ini  rop_shoal.ini
resources/test_tileset/: test_desert.ini  test_forest_temp.ini  test_forest_trop.ini  test_grass.ini  test_mountains.ini  test_rivers.ini  test_roads.ini  test_swamp.ini  test_tileset.ini
rop/: rop_grass.ini  rop_mountain.ini  rop_ocean.ini  rop_tileset.ini
test_tileset/: test_desert.ini  test_grass.ini  test_grass_trop.ini  test_mountains.ini  test_mountains_tall.ini  test_rivers.ini  test_tileset.ini
